tmp-dc/objects/Registration_c_Home__dlm/fields/mvoriginalNS_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>mvoriginalNS_Contact_c__c</fullName>
    <label>Contact</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Contact</labelOverride>
        <masterLabel>Contact</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>