tmp-dc/objects/Registration_c_Home__dlm/fields/mvoriginalNS_EventData_c__c.field-meta.xml
<CustomField>
    <fullName>mvoriginalNS_EventData_c__c</fullName>
    <label>EventData</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>EventData</labelOverride>
        <masterLabel>EventData</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>