tmp-dc/objects/Registration_c_Home__dlm/fields/mvoriginalNS_Status_c__c.field-meta.xml
<CustomField>
    <fullName>mvoriginalNS_Status_c__c</fullName>
    <label>Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Status</labelOverride>
        <masterLabel>Status</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>